# -CryptoModule

./: .gitignore  README.md  gtest库的安装.md  openssl库的安装.md
Client/ClientCryptoModule/: ClientCryptoModule.vcxproj  ClientCryptoModule.vcxproj.filters  SimpleLogger.cpp  SimpleLogger.h  TcpClient.cpp  TcpClient.h  TcpComm.cpp  TcpComm.h  TcpCommunication.cpp  main.cpp
Client/ClientCryptoModule/lib/: libprotobufd.lib
Server/: CMakeLists.txt  TcpCommunication.cpp  TcpCommunication.h  TcpServer.cpp  TcpServer.h  main.cpp
client/ClientCryptoModule/: ClientCryptoModule.sln  ClientCryptoModule.vcxproj  ClientCryptoModule.vcxproj.filters  TcpCommunication.cpp  TcpCommunication.h  main.cpp
server/: CMakeLists.txt  TcpCommunication.cpp  TcpServer.cpp  main.cpp
server/tests/: CMakeLists.txt  aes_testing.cpp
share/: SimpleLogger.cpp  SimpleLogger.h
share/codec/: Codec.hpp  CodecFactory.hpp  Message.proto  RequestCodec.cpp  RequestCodec.h  RequestCodecFactory.cpp  RequestCodecFactory.h  ResponseCodec.cpp  ResponseCodec.h  ResponseCodecFactory.cpp  ResponseCodecFactory.h  protobuf的安装与使用.md  protobuf的安装与使用.txt
share/crypto/aes/: AesCrypto.cpp  AesCrypto.h
share/crypto/hash/: Hash.cpp  Hash.h
share/crypto/rsa/: RsaCrypto.cpp  RsaCrypto.h
